# makelaardij-notify

./: README.md
.github/workflows/: develop.yml  main.yml
client/:  .prettierignore  README.md  capacitor.config.json  package.json
client/public/: firebase-messaging-sw.js  index.html  manifest.json
client/src/: App.tsx  firebase.tsx  index.css  index.tsx  stores.tsx  theme.tsx
client/src/components/: ApartmentList.tsx  FilterModal.tsx  Filters.tsx  Layout.tsx  Listing.tsx  Listings.tsx  Loading.tsx  NavBar.tsx  Push.tsx  ScrollTop.tsx  Search.tsx  ThemeToggle.tsx
client/src/components/filters/: Area.tsx  AreaRange.tsx  Availability.tsx  PriceRange.tsx  YearRange.tsx
client/src/stores/: apartments.tsx  filters.tsx  root.tsx  settings.tsx  ui.tsx
server/: Dockerfile  Makefile  README.md  pyproject.toml  requests.rest  setup.cfg
server/app/: broadcast.py  common.py  main.py  models.py  update.py
server/app/scrapers/: baljon.py  base.py  blijdorp.py  crontab  de.py  lokkerbol.py  m1.py  maarten.py  ooms.py  prins.py  realworks.py  teriele.py  vandevijver.py  vankleef.py  vanoosten.py  voorberg.py  woonvisie.py
server/app/scripts/: broadcast.py
server/scripts/: blijdorp.py
