[tool.poetry]
name = "makelaardij-notify"
version = "0.1.0"
description = ""
authors = ["Damien Allen <dev@dallen.co>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
